<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/add_details"
            android:textSize="20sp"
            android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:shrinkColumns="*"
        android:stretchColumns="*">


        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:background="#778899"
                android:padding="20dip"
                android:text="@string/component"
                android:gravity="center"
                android:textColor="#ffffff" />

            <TextView
                android:background="#778899"
                android:padding="20dip"
                android:gravity="center"
                android:text="@string/percentage"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="20dip"
                android:text="@string/basic_pay"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/basicPayPer"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:padding="20dip"
                android:text="" />


        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="20dip"
                android:text="@string/hra"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/hraPer"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:padding="20dip"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="20dip"
                android:text="@string/special_a"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/saPer"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:padding="20dip"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="20dip"
                android:text="@string/canteen_a"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/caPer"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:padding="20dip"
                android:text="" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="20dip"
                android:text="@string/sda"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/sdaPer"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:padding="20dip"
                android:text="" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:padding="20dip"
                android:text="@string/epf"
                android:gravity="center"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/epfPerinDetails"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:padding="20dip"
                android:text="" />
        </TableRow>


    </TableLayout>
    <Button
        android:id="@+id/btnaddDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="#778899"
        android:text="@string/btnadd"
        android:textColor="#ffffff" />
</LinearLayout>
