<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ctc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_ctc"
        android:textSize="16sp"
        android:inputType="number" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e0ffff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/total_salary"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/permonth"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="#007d00"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/total_deduction"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/permonthDeduction"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="#ff0000"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text="@string/net_salary"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/NetFinalDisplay"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:text=""
                android:textColor="#0000ff"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:layout_marginTop="10dp"
            tools:ignore="UselessParent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:shrinkColumns="*"
                android:stretchColumns="*">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:background="#778899"
                        android:padding="20dip"
                        android:text="@string/component"
                        android:textColor="#ffffff" />

                    <TextView
                        android:background="#778899"
                        android:padding="20dip"
                        android:text="@string/percentage"
                        android:textColor="#ffffff" />

                    <TextView
                        android:background="#778899"
                        android:padding="20dip"
                        android:text="@string/amount"
                        android:textColor="#ffffff" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="20dip"
                        android:text="@string/basic_pay"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/basicPayPer"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/basicPayAmt"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                </TableRow>


                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="20dip"
                        android:text="@string/hra"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/hraPer"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/hraAmt"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="20dip"
                        android:text="@string/special_a"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/saPer"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/saAmt"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="20dip"
                        android:text="@string/canteen_a"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/caPer"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/caAmt"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="20dip"
                        android:text="@string/sda"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sdaPer"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/sdaAmt"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="20dip"
                        android:text="@string/epf"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/epfPer"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/epfAmt"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:padding="20dip"
                        android:text="@string/tax1"
                        android:textColor="#000000"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/taxPer"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/taxAmt"
                        android:padding="20dip"
                        android:text=""
                        android:textColor="#000000" />

                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>


